Added class stuff and updated repo link

--- a/public/index.html
+++ b/public/index.html
@@ -145,7 +145,7 @@
         <div class="card">
           <h3>TERMINAL INTERFACE V4.0</h3>
           <p>Current web terminal interface for FKLR-F23 unit. Running HTML/CSS/JS integration protocols with SIGNALIS-inspired UI elements. Running off of nginx and nodejs!</p>
-          <a href="https://github.com/lilac-rose/lilacrose.dev">[SOURCE CODE]</a>
+          <a href="https://github.com/lilac-rose/lilacrose.dev2.0">[SOURCE CODE]</a>
         </div>
         <div class="card">
           <h3>NOVA BOT</h3>
